kube_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eazyintegration
---
apiVersion: v1
kind: Service
metadata:
  name: eazyintegration-hawtio
  labels:
    app: eazyintegration
  namespace: eazyintegration
spec:
  ports:
  - name: hawtio
    port: 8888
    targetPort: 8888
  selector:
    app: eazyintegration
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: eazyintegration
  labels:
    app: eazyintegration
  namespace: eazyintegration
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: eazyintegration
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eazyintegration
  labels:
    app: eazyintegration
  namespace: eazyintegration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eazyintegration
  template:
    metadata:
      labels:
        app: eazyintegration
    spec:
      containers:
      - name: eazyintegration
        image: rahgadda/eazyintegration
        imagePullPolicy: Always
        command: ["camel"]
        args: ["run","/workspace/EazyIntegration/route/remote-post-http.yaml"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8888
          name: hatio
        lifecycle:
            postStart:
              exec:
                command: ["bash","/workspace/EazyIntegration/start_monitoring.sh"]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eazyintegration-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/app-root: /eazyintegration
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: eazyintegration
  namespace: eazyintegration
spec:
  tls:
    - hosts:
      - example.com
      secretName: certificate-secret
  rules:
    - host: example.com
      http:
        paths:
          - path: /eazyintegration(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: eazyintegration
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eazyintegration-hawtio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: eazyintegration
  namespace: eazyintegration
spec:
  tls:
    - hosts:
      - example.com
      secretName: certificate-secret
  rules:
    - host: example.com
      http:
        paths:
          - path: /hawtio
            pathType: Prefix
            backend:
              service:
                name: eazyintegration-hawtio
                port:
                  number: 8888
